# Labworks-cpp-24-25

./: .gitignore  README.md
labwork1-Zuneve/: .gitignore  CMakeLists.txt  README.md  main.cpp
labwork2-Zuneve/: README.md
labwork2-Zuneve/lib/: number.cpp
labwork2-Zuneve/tests/: number_test.cpp
labwork3-Zuneve/: CMakeLists.txt
labwork3-Zuneve/lib/: CMakeLists.txt  GenBMP.cpp  GenBMP.h  MyStructs.cpp  MyStructs.h  ParseArguments.cpp  ParseArguments.h  ParseTSV.cpp  ParseTSV.h
labwork4-Zuneve/lib/: ArgParser.cpp
labwork4-Zuneve/tests/: argparser_test.cpp
labwork6/: CMakeLists.txt
labwork6-Zuneve/lib/: CityInput.cpp  FlightScheduleManager.cpp  FlightScheduleManager.h  GetCityCode.cpp  GetCityCode.h  JsonInfoPrinter.h  MyCache.cpp  Request.cpp
labwork6/lib/: CMakeLists.txt  CityInput.h  JsonInfoPrinter.cpp  MyCache.h  Request.h
labwork7-Zuneve/lib/: unrolled_list.h
labwork7-Zuneve/tests/: CMakeLists.txt  exception_safety_ut.cpp  my_tests.cpp
labwork8-Zuneve/lib/: aggregate_by_key.h  as_data_flow.h  as_vector.h  dir.h  drop_null_opt.h  filter.h  join.h  join_result.h  kv.h  open_files.h  out.h  processing.h  split.h  split_expected.h  transform.h  write.h
labwork8-Zuneve/tests/: CMakeLists.txt  aggregate_by_key_ut.cpp  my_tests.cpp
labwork9-Zuneve/lib/: MyAny.h  MyFunction.h  MyInvoke.h  MyIsSame.h  MyRemoveCV.h  MyRemoveReference.h  scheduler.h
labwork9-Zuneve/tests/: CMakeLists.txt  my_tests.cpp
